--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <span>Illustrations by <a href="https://www.freepik.com/" rel="noreferrer" target="_blank">Freepik</a><br>
-            &copy;<a href="https://zakariya311.github.io/my__website/" target="_blank" rel="noreferrer">Zakariya Qureshi</a></span>
+            &copy;<a href="https://zakariyaq313.github.io/my_website/" target="_blank" rel="noreferrer">Zakariya Qureshi</a></span>
 
     </main>
 
