Added transitions and minor fixes

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <ul class="items-list"></ul>
 
             <div class="empty-list">
-                <p class="empty-help">No items in list, add some new</p>
+                <p class="empty-info">No items in list, add some new</p>
                 <img src="images/relaxed.jpg" alt="Man resting on sofa" class="idle">
             </div>
 
 
             <div class="new-item">
-                <input type="text" name="" value="" class="add-item" required>
+                <input type="text" name="" value="" class="add-item">
                 <i class="material-icons add-item-icon">add</i>
             </div>
         </div>
