--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
             </div>
         </div>
 
-        <span>Illustrations by <a href="https://www.freepik.com/" rel="noreferrer" target="_blank">Freepik</a><br>
-            &copy;<a href="https://zakariyaq313.github.io/my_website/" target="_blank" rel="noreferrer">Muhammad Zakariya</a></span>
-
+        <span>Illustrations by <a href="https://www.freepik.com/" rel="noopener" target="_blank">Freepik</a><br>
+            &copy;<a href="https://zakariyaq313.github.io/my_website/" target="_blank" rel="noopener">Muhammad Zakariya</a></span>
     </main>
 
     <script src="./main.js" charset="utf-8"></script>
