Update broken links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <span>Illustrations by <a href="https://www.freepik.com/" rel="noopener" target="_blank">Freepik</a><br>
-            &copy;<a href="https://zakariyaq313.github.io/my_website/" target="_blank" rel="noopener">Muhammad Zakariya</a></span>
+            &copy;<a href="https://zakariyaq313.github.io/my-website/" target="_blank" rel="noopener noreferrer">Muhammad Zakariya</a></span>
     </main>
 
     <script src="./main.js" charset="utf-8"></script>
